# app/main.go
@@ -4,18 +4,19 @@ import (
 	"database/sql"
 	"fmt"
 	"log"
-	"net/http"
 	"os"
 
 	"github.com/labstack/echo/v4"
+	"github.com/labstack/echo/v4/middleware"
 	_ "github.com/lib/pq"
 	"github.com/subosito/gotenv"
-	echoSwagger "github.com/swaggo/echo-swagger"
 
 	_ "github.com/pastorilps/propostas_populares/app/docs"
-	middlewares "github.com/pastorilps/propostas_populares/middlewares"
-	_migrations "github.com/pastorilps/propostas_populares/propostas/repository/migrations"
-	"github.com/pastorilps/propostas_populares/users/model"
+	middleware_cors "github.com/pastorilps/propostas_populares/middlewares"
+	_migrations "github.com/pastorilps/propostas_populares/migrations"
+	_userHttpDelivery "github.com/pastorilps/propostas_populares/users/delivery/http"
+	_userRepo "github.com/pastorilps/propostas_populares/users/repository"
+	_userUseCase "github.com/pastorilps/propostas_populares/users/usecase"
 )
 
 type Env struct {
@@ -28,7 +29,7 @@ func init() {
 
 // @title Echo Propostas Populares API
 // @version 1.0
-// @description This is a sample server server.
+// @description This is a sample crud api.
 // @termsOfService http://swagger.io/terms/
 
 // @contact.name API Support
@@ -73,62 +74,17 @@ func main() {
 	defer dbConn.Close()
 	e := echo.New()
 
-	e.GET("/swagger/*", echoSwagger.WrapHandler)
+	// Middleware
+	mid := middleware_cors.InitMiddleware()
+	e.Use(middleware.Logger())
+	e.Use(middleware.Recover())
+	e.Use(mid.CORS)
 
-	e.POST("/user/create", func(c echo.Context) error {
-		u := new(model.UserData)
-		if err := c.Bind(u); err != nil {
-			return err
-		}
+	userRepo := _userRepo.NewUserRepo(dbConn)
+	userUseCase := _userUseCase.NewUserUseCase(userRepo)
+	_userHttpDelivery.NewUserHandler(e, userUseCase)
 
-		u.Password = middlewares.SHA256Encoder(u.Password)
-
-		sqlStatement := "INSERT INTO public.user (name, email, password, picture, newsletter)VALUES ($1, $2, $3, $4, $5)"
-		res, err := dbConn.Query(sqlStatement, u.Name, u.Email, u.Password, u.Picture, u.Newsletter)
-		if err != nil {
-			fmt.Println(err)
-		} else {
-			fmt.Println(res)
-			return c.JSON(http.StatusCreated, u)
-		}
-		return c.String(http.StatusOK, "User created")
-	})
 	_migrations.Exec(dbConn)
 
 	log.Fatal(e.Start(":7500"))
-}
-
-type UserData struct {
-	Name       string `json:"name"  validate:"required" example:"Name"`
-	Email      string `json:"email"  validate:"required" example:"test@test.com"`
-	Password   string `json:"password"  validate:"required" example:"aB@1245"`
-	Picture    int    `json:"picture"  validate:"required" example:"1"`
-	Newsletter bool   `json:"newsletter"  validate:"required" example:"true"`
-}
-
-// Create User godoc
-// @Summary Creates a user.
-// @Description creates users.
-// @Tags user
-// @Param Body body UserData true "The body to create a thing"
-// @Accept json
-// @Success 200
-// @Router /user/create [post]
-func createUser(dbConn *sql.DB, c echo.Context) error {
-	u := new(model.UserData)
-	if err := c.Bind(u); err != nil {
-		return err
-	}
-
-	u.Password = middlewares.SHA256Encoder(u.Password)
-
-	sqlStatement := "INSERT INTO public.user (name, email, password, picture, newsletter)VALUES ($1, $2, $3, $4, $5)"
-	res, err := dbConn.Query(sqlStatement, u.Name, u.Email, u.Password, u.Picture, u.Newsletter)
-	if err != nil {
-		fmt.Println(err)
-	} else {
-		fmt.Println(res)
-		return c.JSON(http.StatusCreated, u)
-	}
-	return c.String(http.StatusOK, "User created")
 }
